test/parsing/errors/stringLiteralEOF.compopts
--detailed-errors # stringLiteralEOF-detailed.good
--no-detailed-errors # stringLiteralEOF-brief.good
